# agcluster-container

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLOSE_DEPENDABOT_PRS.md  CONTRIBUTING.md  DEPENDABOT_ACTIONS_SUMMARY.md  DEPENDABOT_PR_REVIEW.md  Dockerfile  LICENSE  PROVIDERS.md  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: test.yml  ui-build.yml
configs/: README.md
configs/custom/: custom.yaml
configs/presets/: code-assistant.yaml  data-analysis.yaml  fullstack-team.yaml  github-code-review.yaml  research-agent.yaml
container/: agent_server.py  requirements.txt
docker/: Dockerfile.agent
docs/: architecture.md  quickstart.md
docs/providers/: fly_machines.md
e2e/: agcluster.spec.ts
examples/: fly_provider_demo.py
examples/librechat/: README.md  librechat.example.yaml
src/agcluster/container/api/: agent_chat.py  agents.py  chat_completions.py  configs.py  files.py  main.py  tools.py
src/agcluster/container/core/: config.py  config_loader.py  container_manager.py  session_manager.py  translator.py
src/agcluster/container/models/: agent_config.py  schemas.py
src/agcluster/container/ui/: .env.example  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  (+3 more)
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_claude_native_flow.py  test_concurrent_containers.sh  test_docker_upload_e2e.py
tests/integration/: test_api_configs.py  test_api_endpoints.py  test_builder_config_api.py  test_file_upload_api.py
tests/robustness/: test_concurrent_sessions.py
tests/unit/: test_agent_config.py  test_config_loader.py  test_container_manager.py  test_file_upload.py  test_session_manager.py  test_translator.py
tests/unit/providers/: __init__.py  test_base.py  test_docker_provider.py  test_factory.py  test_fly_provider.py  test_upload.py
(+42 files in other folders)
